# clippings-converter

./: .gitignore  README.md  converter.py  index.html  pyproject.toml  sample.txt
tests/: clipping_without_page.txt  clippings_full.txt  single_clipping.txt  test_parser.py
