[tool.poetry]
name = "clippings-converter"
version = "0.1.0"
description = "Kindle clippings converter"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
Markdown = "^3.4.3"
pytest = "^7.2.2"
ipdb = "^0.13.13"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "-ra -q"
]

